style.css
* {
    font-family: 'Press Start 2P', cursive;
}
body {
    background-color: #232323;
}
h1 {
    margin: 0;
}
button {
    border: 0;
    font-size: 16px;
}
button:hover, #viewNft:hover {
    background-color: #ddd;
    cursor: pointer;
}

#root {
    display: inline-block; 
    position: relative;
}
#overlappingDiv {
    background-color: black; 
    position:absolute; 
    top:0; left: 0; bottom: 0; right: 0; 
    opacity: 0; 
    pointer-events: none; 
    z-index: 10;
}
#mapOverlay {
    position: absolute; 
    bottom:20px; 
    left: 20px;
}
#startScreen, #startScreen2 {
    position: absolute; 
    top:0; left: 0; bottom: 0; right: 0; 
    background-color: grey;
}
#startScreen {
    z-index: 40;
}
#startScreen2 {
    z-index: 30;
}
#nameBox, #classBox, #nftBox {
    position: absolute; 
    top: 25%; left: 25%; right: 25%; 
    font-size: 24px; 
    height: 50px;
}
#nftBox {
    top: 40%;
}
#chooseName {
    font-size: 24px;
}
#chooseClass, #chooseNft {
    font-size: 18px;
}
span {
    font-size: 12px;
}
#startButton, #heroButton {
    position: absolute; 
    top: 65%; left: 35%; right: 35%; 
    font-size: 24px; 
    height: 50px; 
    border: black solid 4px;
}
#heroButton {
    top: 75%; 
}
#viewNft, a {
    color: blue;
}
#nftScreen {
    display: none;
    position: absolute;
    top: 10%; left: 10%; right: 10%; bottom: 10%;
    background-color: white;
    border: #232323 double 4px;
    z-index: 35;
}
#showNfts {
    display: flex;
}
#userNft { /* TODO: FIX NFT GALLERY CSS */
    border: #232323 solid 2px;
    background: #ddd;
}
#nftScreenButton {
    position: absolute;
    bottom: 10%; left: 40%; right: 40%;
    border: #232323 solid 2px;
}
#userInterface {
    display: none;
}
#enemyHealthBox, #playerHealthBox {
    background-color: white; 
    width: 250px; 
    position: absolute; 
    border: 4px black solid; 
    padding: 12px;
}
#enemyHealthBox {
    top: 50px; left: 50px; 
}
#playerHealthBox {
    top: 300px; right: 50px;
}
#enemyName, #playerName {
    font-size: 16px
}
#enemyHealthBar, #playerHealthBar {
    height: 5px; 
    background-color: green; 
    position: absolute; 
    top: 0; left: 0; right: 0;
}
#greyBox {
    height: 5px; 
    background-color: #ccc; 
    margin-top: 10px;
}
#healthWrapper {
    position: relative;
}
#dialogueWrapper {
    background-color: white; 
    height: 140px; 
    position: absolute; 
    bottom: 0; right: 0; left: 0; 
    border-top: 4px solid black; 
    display: flex;
}
#dialogueBox {
    position:absolute; 
    top: 0; right: 0; bottom: 0; left: 0; 
    background: white; 
    padding: 12px; 
    display: none; 
    cursor: pointer;
}
#attacksBox {
    width: 66.66%; 
    display: grid; 
    grid-template-columns: repeat(2, 1fr);
}
#logWrapper {
    /* display: flex; 
    align-items: center; 
    justify-content: center;  */
    width: 50%; 
    border-left: 4px solid black;
}
#battleLog {
    text-decoration: underline;
    margin: 10px;
    font-size: 12px;
}
h6 {
    margin: 5px;
    margin-left: 10px;
    font-size: 10px;
}
#levelUpOverlay {
    display: none;
    position: absolute;
    top: 10%; left: 10%; right: 10%; bottom: 10%;
    background-color: white;
    border: #232323 double 4px;
    z-index: 20;
}
#classBox {
    top: 40%; 
}

